# simd_matmul

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  simd_matmul
include/: matrix.hpp
src/: main.cpp  matrix.cpp
